// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should remove toasts after 3sec 1`] = `<div />`;

exports[`should remove toasts on click 1`] = `
<div>
  <div
    class="toaster  mko_aa16jz-toaster"
  />
</div>
`;

exports[`should render toasts when popped 1`] = `
<div>
  <div
    class="toaster  mko_aa16jz-toaster"
  >
    <span
      class="toast toast--info  mko_aa16jz-toast  mko_aa16jz-toast--info"
      role="button"
      tabindex="0"
    >
      <span
        class="toast__title  mko_aa16jz-toast__title"
      >
        jest
      </span>
      <span
        class="toast__message"
      >
        this is a test
      </span>
    </span>
  </div>
</div>
`;

exports[`should render with minimum props 1`] = `
<div>
  <div
    class="toaster  mko_aa16jz-toaster"
  />
</div>
`;
